--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1010,7 +1010,7 @@ Fun Facts Style
   color: #f35525;
 }
 
-.fun-facts .counter:after {
+/* .fun-facts .counter:after {
   position: absolute;
   width: 50px;
   height: 50px;
@@ -1019,7 +1019,7 @@ Fun Facts Style
   content: '';
   right: -25px;
   top: -25px;
-}
+} */
 
 
 /* 
